Dummy_Package_for_scratch_org/main/default/objects/Test_Script_Step__c/Test_Script_Step__c.object-meta.xml
<CustomObject>
    <description>The individual template step for a test script</description>
    <label>Test Script Step</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Script Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>