Dummy_Package_for_scratch_org/main/default/objects/Test_Script_Step__c/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <label>Action/Description</label>
    <type>TextArea</type>
</CustomField>