Dummy_Package_for_scratch_org/main/default/objects/Test_Script_Step__c/fields/Guidance_notes__c.field-meta.xml
<CustomField>
    <fullName>Guidance_notes__c</fullName>
    <label>Guidance notes</label>
    <type>TextArea</type>
</CustomField>