Dummy_Package_for_scratch_org/main/default/objects/Test_Script_Step__c/fields/Step_Title__c.field-meta.xml
<CustomField>
    <fullName>Step_Title__c</fullName>
    <label>Step Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>